[workspace.package]
version = "0.4.1"
authors = ["Eduardo Flores <edfloreshz@proton.me>"]
description = "Devmode is a project management utility for developers."
edition = "2021"
license = "GPL-3.0-only"
repository = "https://github.com/edfloreshz/devmode/"
homepage = "https://devmode.edfloreshz.dev/"
categories = ["development-tools"]
keywords = ["development", "utility"]
exclude = [".idea", ".github", ".vscode", "assets"]
readme = "README.md"

[workspace]
resolver = "2"
members = ["cli"]

[workspace.dependencies]
git2 = "0.19.0"
git2_credentials = "0.14.0"
git-url-parse = "0.4.4"
thiserror = "2.0.9"
log = "0.4.22"
dirs = "5.0.1"
