[workspace.package]
version = "0.4.1"
authors = ["Eduardo Flores <edfloreshz@proton.me>"]
description = "Devmode is a project management utility for developers."
edition = "2021"
license = "GPL-3.0-only"
repository = "https://github.com/edfloreshz/devmode/"
homepage = "https://devmode.edfloreshz.dev/"
categories = ["development-tools"]
keywords = ["development", "utility"]
exclude = [".idea", ".github", ".vscode", "assets"]
readme = "README.md"

[workspace]
resolver = "2"
members = ["cli", "core"]

[workspace.dependencies]
git2 = "0.20.2"
git2_credentials = "0.15.0"
git-url-parse = "0.4.4"
thiserror = "2.0.12"
dirs = "6.0.0"
