[package]
name = "devmode-cli"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
keywords.workspace = true
exclude.workspace = true

[[bin]]
name = "dm"
path = "src/main.rs"

[dependencies]
services = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
pretty_env_logger = "0.5.0"
clap = { version = "4.5.23", features = ["derive", "cargo"] }
