[package]
name = "devmode"
version.workspace = true
description.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
keywords.workspace = true
exclude.workspace = true
readme.workspace = true

[[bin]]
name = "dm"
path = "src/main.rs"

[dependencies]
thiserror = { workspace = true }
clap = { version = "4.5.23", features = ["derive", "cargo"] }
git2 = { workspace = true }
git2_credentials = { workspace = true }
git-url-parse = { workspace = true }
dirs = { workspace = true }
colored = "3.0.0"
