[package]
name = "dm-core"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
keywords.workspace = true
exclude.workspace = true
readme.workspace = true

[dependencies]
git2 = { workspace = true }
git-url-parse = { workspace = true }
git2_credentials = { workspace = true }
dirs = { workspace = true }
thiserror = { workspace = true }
ron = "0.10.1"
