[package]
name = "dmd"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dmdlib = { path = "../dmd-lib" }
clap = { version = "2.33.3", features = ["yaml"] }
anyhow = "1.0.44"
requestty = "0.1.1"
regex = "1.5.4"
