[package]
name = "dmd"
version = "0.1.0"
edition = "2018"
license = "GPL-2.0"
description = "Devmode is a project management utility for developers."
homepage = "https://devmode.edfloreshz.dev/"
documentation = "https://docs.rs/devmode"
repository = "https://github.com/edfloreshz/devmode/"
readme = "README.md"
exclude = [
    ".idea",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dmdlib = { version = "0.1.0", path = "../dmd-lib" }
clap = { version = "2.33.3", features = ["yaml"] }
anyhow = "1.0.44"
requestty = "0.1.1"
regex = "1.5.4"
