[package]
name = "dmdt"
version = "0.1.0"
edition = "2021"
license = "GPL-2.0"
description = "Devmode TUI is a project management utility for developers."
homepage = "https://devmode.edfloreshz.dev/"
documentation = "https://docs.rs/devmode"
repository = "https://github.com/edfloreshz/devmode/"
readme = "README.md"
exclude = [
    ".idea",
]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = "0.16"
termion = "1.5.6"
rand = "0.8.4"
anyhow = "1.0.44"
dmdlib = { path = "../dmdlib" }