[package]
name = "devmode-gui"
version = "0.1.0"
authors = ["Eduardo Flores <edfloreshz@gmail.com>"]
edition = "2021"
build = "build.rs"

[[bin]]
name = "dmg"
path = "src/main.rs"

[dependencies]
devmode-shared = { path = "../shared" }
git2 = "0.14.4"
slint = "1.4"

[build-dependencies]
slint-build = "1.4"
