[package]
name = "devmode-shared"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libset = "0.1.2"
clap = { version = "3.2.14", features = ["derive"] }
anyhow = "1.0.44"
requestty = "0.4.1"
colored = "2.0.0"
regex = "1.5.4"
git2 = "0.14.4"
git2_credentials = "0.8.0"
cmd_lib = "1.1.0"
walkdir = "2.3.2"
serde = { version = "1.0.126", features = ["derive"] }
fs_extra = "1.2.0"
derive_setters = "0.1.6"
git-url-parse = "0.4.4"
