[package]
name = "devmode-freya"
version = "0.1.0"
authors = ["Eduardo Flores <edfloreshz@proton.me>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/edfloreshz/devmode/"
homepage = "https://devmode.edfloreshz.dev/"
categories = ["development-tools"]
keywords = ["development", "utility"]
exclude = [".idea", ".github", ".vscode"]

[dependencies]
freya = { git = "https://github.com/marc2332/freya" }
dioxus = { version = "0.4", features = [
    "macro",
    "hooks",
], default-features = false }
dark-light = "1.0.0"
