[package]
name = "devmode-slint"
build = "build.rs"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
keywords.workspace = true

[[bin]]
name = "dmg"
path = "src/main.rs"

[dependencies]
devmode = { path = "../../" }
git2 = "0.14.4"
slint = "1.4"

[build-dependencies]
slint-build = "1.4"
