[package]
name = "devmode-cli"
description = "Devmode is a project management utility for developers."
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
keywords.workspace = true

[[bin]]
name = "dm"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
devmode = { path = "../../" }
libset = "0.1.2"
clap = { version = "3.2.14", features = ["derive"] }
anyhow = "1.0.44"
requestty = "0.4.1"
colored = "2.0.0"
regex = "1.5.4"
git2 = "0.14.4"
git2_credentials = "0.8.0"
cmd_lib = "1.1.0"
walkdir = "2.3.2"
serde = { version = "1.0.126", features = ["derive"] }
fs_extra = "1.2.0"
url-builder = "0.1.1"
