[package]
name = "devmode-ui"
version = "0.3.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
keywords.workspace = true
exclude.workspace = true

[dependencies]
i18n-embed-fl = "0.8"
once_cell = "1.19.0"
open = "5.1.3"
rust-embed = "8.3.0"
slotmap = "1.0.7"
tokio = { version = "1.37.0", features = ["full"] }

[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic.git"
default-features = false
features = ["dbus-config", "tokio", "winit", "wgpu", "desktop"]

[dependencies.i18n-embed]
version = "0.14"
features = ["fluent-system", "desktop-requester"]
